// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions should decrement should create decrement action 1`] = `
Object {
  "type": "DECREMENT_COUNTER",
}
`;

exports[`actions should increment should create increment action 1`] = `
Object {
  "type": "INCREMENT_COUNTER",
}
`;

exports[`actions should incrementAsync should create incrementAsync action 1`] = `
Object {
  "type": "INCREMENT_ASYNC",
}
`;

exports[`actions should incrementIfOdd should create incrementIfOdd action 1`] = `
Object {
  "type": "INCREMENT_IF_ODD",
}
`;
